--- a/css/homepage-style-sheet.css
+++ b/css/homepage-style-sheet.css
@@ -7,7 +7,7 @@
 
 html, body {
     width:100%;
-    height:100%
+    height:100%;
 }
 
 /* page structure */
@@ -63,6 +63,8 @@ nav ul {
 
 nav ul li {
     text-align:center;
+    list-style:none;
+    padding:0;
 }
 
 nav ul li a{
