--- a/css/global.css
+++ b/css/global.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html, body {
@@ -21,7 +22,8 @@ body {
 }
 
 .page{
-    width: 700px;
+    width: 100%;
+    max-width: 700px;
     margin: auto;
     margin-top: 15px;
 }
@@ -39,7 +41,7 @@ h1{
 /* navigation styles */
 
 nav {
-    background-color: #BAA5FF;
+    background-color: #2F6690;
 }
 
 nav ul {
