--- a/css/about-us.css
+++ b/css/about-us.css
@@ -12,30 +12,27 @@ main section {
 
 main ul {
     text-align: center;
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
     list-style: none;
 }
-section {
-    display: flex;
-   flex-direction: column;
-}
-table {
-    border:1px solid rgb(90 173 191);
+section, table {
+    border:1px solid rgb(90,173,191);
     background-size: cover;
     background-color: #f9f7f37a;
-    
-    width: 53%;
-    height: 51%;
+    width: 100%;
+    height: 80%;
     
 }
 table thead {
-    height:40%;
+    height:100px;
+    width: 50px;
+}
+table body {
+    height: 100px;
+    width: 80px;
 }
 
-table body {
-    height: 50%;
-}
 
 .table-h {
     margin-top: 20px;
