--- a/css/gamepage-style-sheet.css
+++ b/css/gamepage-style-sheet.css
@@ -6,7 +6,7 @@
    .box {
        width: 65%;
        height: 65%;
-       background-color: #99c1b9;
+       background-color: #99c1b9c4;
        margin: 0;
        position: relative;
        top: 45%;
@@ -17,12 +17,12 @@
    }
 
    .game {
-       width: 80%;
-       height: 75%;
+       width: 55%;
+       height: 65%;
        margin: 0;
-       position: relative;
+       position: absolute;
        top: 50%;
-       right: -13%;
+       right: 40%;
        transform:translateY(-50%);
        border-radius:10px;
        display:flex;
@@ -33,15 +33,14 @@
        height: 50%;
        text-align:left;
        background-color: #f9f8f8;
-       position: relative;
+       position: absolute;
        margin: 0;
        padding: 10px;
-       right: -40%;
-       bottom: -25%;
+       right: 1%;
+       bottom: 25%;
        border-radius: 10px;
    }
 
    h1{
        padding: 20px;
-       font-weight: 300;
    }
