--- a/css/global.css
+++ b/css/global.css
@@ -34,14 +34,12 @@ h1{
     font-weight: 100;
     text-align: center;
     color: black;
-
+}
 
 /* navigation styles */
 
 nav {
-
-    background-color: #2F6690;
-
+background-color: rgb(47, 102, 144);
 }
 
 nav ul {
