--- a/css/about-us.css
+++ b/css/about-us.css
@@ -4,10 +4,17 @@ main {
 }
 
 main section {
-    height: 60%;
+
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+h2 {  
+    display: flex;
+   
+    justify-content: left;
+    text-transform: uppercase;
 }
 
 main ul {
@@ -27,6 +34,7 @@ section, table {
 table thead {
     height:100px;
     width: 50px;
+    font-family: "Monaco", "Courier New", monospace;
 }
 table body {
     height: 100px;
