--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -1,3 +1,33 @@
 thead, img {
     position: relative; 
 }
+main {
+    height: 100%;
+    width: 100%;
+}
+
+main section {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h2 {  
+    text-transform: uppercase;
+}
+
+main ul {
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    list-style: none;
+}
+section, table {
+    border:1px solid rgb(90,173,191);
+    background-size: cover;
+    background-color: #f9f7f37a;
+    width: 100%;
+    height: 80%;
+    
+}
