--- a/css/resources-style.css
+++ b/css/resources-style.css
@@ -1,3 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap');
+
 body{
-    background-image: url(../Images/resource-2.jpg);
+    background-image: url(../Images/resources-2.jpg);
+    background-size: cover;
+}
+
+.facts{
+    margin-left: 15%;
+    margin-right: 15%;
+    font-size: 18px;
+    line-height: 35px;
+}
+
+.facts ul{
+    background-color: #99c1b9d0;
+    list-style: none;
+    line-height: 45px;
+}
+
+.facts h2{
+    margin-bottom: 5%;
+    margin-top: 4%;
+    text-align:center;
+    font-family: 'Marcellus SC', serif;
+    background-color: #99c1b9d0;
+}
+
+.facts p{
+    text-align:center;
+    background-color: #fecdaabb;
+    margin-top: 15px;
+    font-weight: bolder;
 }
