--- a/css/login-sign-in-page.css
+++ b/css/login-sign-in-page.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap');
 
+body{
+    background-image: url(../Images/log-in-background.jpg);
+}
 .background-log-in {
     padding: 0 13% 3% 13%;
     background-color:white;
