--- a/css/global.css
+++ b/css/global.css
@@ -19,8 +19,8 @@ body {
     grid-template-columns: 1fr auto;
     background-size: cover;
 }
-
 .page{
+    height: 100%;
     width: 100%;
     max-width: 700px;
     margin: auto;
