--- a/css/community-page.css
+++ b/css/community-page.css
@@ -1,16 +1,13 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap');
 .comment-text{
     border-color: blue;
     border: 10%;
     text-align: center;
 }
-.comment-section-background{
-    width:30%;
-    height: 80%;    
+.community-blocks{
+    height: 100%;
     background-color: white;
     border-radius: 10px;
-    margin-top: 8%;
-    margin-left: 10%;
     box-sizing: border-box;
     border: 1rem solid;
     border-color: rgb(47, 102, 144);
@@ -28,19 +25,9 @@ hr {
     text-align: center;
     margin-top: 5%;
 }
-input {
-    width: 80%;
-}
-.feedback-box{
-    padding: 20%;
-    padding-top: 33%;
-    padding-bottom: 5%;
-    margin-right: -180%;
-    margin-left: 120%;
-    margin-top: 60%;
-    box-sizing: border-box;
-    background-color: white;
-    border: 0.8rem solid rgb(47, 102, 144);
+.community-blocks, input{
+    width: 90%;
+    text-align: center;
 }
 h2 {
     padding: 1%;
@@ -51,9 +38,42 @@ h2 {
     font-size: 18px;
     color:white;
 }
-.feedback-box input {
- margin-top: 3%;
- margin-left: -13%;
- width: 126%;
- height: 200px;
+.community-page-grid {
+    height: 97%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 80px;
+    margin-left: -20%;
+}
+#live-comment{
+    grid-row: span 2;
+    width: 350px;
+}
+.pages{
+    height: 98%;
+    width: 140%;
+    max-width: 700px;
+    margin: auto;
+    margin-top: 15px;
+}
+.comment-feedback{
+width: 650px;
+}
+.comment-title{
+    margin-left: 10%;
+    width: 80%;
+    font-size: 300%;
+    margin-top:10%;
+    background-color: #99c1b9;
+    border-radius: 100%;
+}
+hr {
+    width: 100%;
+    text-align: center;
+}
+h4 {
+    text-align: center;
+    margin-top: 17%;
+    font-family: 'Marcellus SC', serif;
 }
