--- a/css/community-page.css
+++ b/css/community-page.css
@@ -13,7 +13,7 @@
     border-color: rgb(47, 102, 144);
 }
 body{
-    background-image: url(../images/gamepage.jpg);
+    background-image: url(../Images/gamepage.jpg);
 }
 h3 {
     text-align: center;
